px instead of %

--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ h2
 div.BoutonBitcoin
 {
 	
-	padding-top : 30%;
-	margin-left : 55%;
+	padding-top : 30px;
+	margin-left : 200px;
 }
 
 div.BoutonExplorer
 {
-	padding-top : 30%;
-	margin-left : 25%;
+	padding-top : 30px;
+	margin-left : 350px;
 }
