--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ h2
 div.BoutonBitcoin
 {
 	
-	padding-top : 30px;
+	padding-top : 15px;
 	margin-left : 200px;
 }
 
 div.BoutonExplorer
 {
-	padding-top : 30px;
-	margin-left : 350px;
+	padding-top : 7x;
+	margin-left : 200px;
 }
